--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -14,6 +14,8 @@
     tools:context=".MainActivity">
 
 
+
+
     <Button
         android:id="@+id/lolbutton"
         android:layout_width="match_parent"
@@ -22,7 +24,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="40dp"
-        android:background="@android:color/background_dark"
+        android:background="?android:attr/colorControlHighlight"
         android:text="ODPOVED"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"/>
@@ -32,7 +34,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ball1"
-        android:layout_marginBottom="43dp"
-        android:layout_above="@+id/lolbutton"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
 </RelativeLayout>
